--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,6 @@ ADMIN_EMAIL=admin_email@example.com
 
 # URL base
 BASE_URL=http://localhost:3000
+
+# URL frontend
+FRONTEND_URL=http://localhost:4200
